// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardAdmin renders error state 1`] = `
<div>
  <p>
    error
  </p>
</div>
`;

exports[`CardAdmin renders loading state 1`] = `
<div>
  <p>
    loading
  </p>
</div>
`;
